// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unified | Model List should match snapshot 1`] = `
<ul
  class="MuiList-root MuiList-padding"
>
  <li
    class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
    role="menuitem"
    tabindex="-1"
  >
    <div
      class="MuiListItemText-root"
    >
      <h3
        class="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
      >
        Ceuta & Melilla
      </h3>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </li>
  <li
    class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
    role="menuitem"
    tabindex="-1"
  >
    <div
      class="MuiListItemText-root"
    >
      <h3
        class="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
      >
        Bahamas
      </h3>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </li>
  <li
    class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
    role="menuitem"
    tabindex="-1"
  >
    <div
      class="MuiListItemText-root"
    >
      <h3
        class="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
      >
        American Samoa
      </h3>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </li>
</ul>
`;

exports[`Unified | Model ListItem should match snapshot 1`] = `
<li
  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
  role="menuitem"
  tabindex="-1"
>
  <div
    class="MuiListItemText-root"
  >
    <h3
      class="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
    >
      Ceuta & Melilla
    </h3>
  </div>
  <span
    class="MuiTouchRipple-root"
  />
</li>
`;

exports[`Unified | Page Collection should match snapshot 1`] = `
<ul
  class="MuiList-root MuiList-padding"
>
  <li
    class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
    role="menuitem"
    tabindex="-1"
  >
    <div
      class="MuiListItemText-root"
    >
      <h3
        class="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
      >
        Romania (10)
      </h3>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </li>
  <li
    class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
    role="menuitem"
    tabindex="-1"
  >
    <div
      class="MuiListItemText-root"
    >
      <h3
        class="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
      >
        Iran (3)
      </h3>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </li>
  <li
    class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
    role="menuitem"
    tabindex="-1"
  >
    <div
      class="MuiListItemText-root"
    >
      <h3
        class="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
      >
        Laos (4)
      </h3>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </li>
</ul>
`;

exports[`Unified | StoryDecorators centerPaper should match snapshot 1`] = `
<div
  style="padding: 16px 0px; background-color: rgb(221, 221, 221); display: flex;"
>
  <div
    style="max-width: 300px;"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
    >
      <div>
        Story
      </div>
    </div>
  </div>
</div>
`;
